# solar

./: CMakeLists.txt
resources/: CMakeLists.txt  default.yaml
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  DataStore.cpp  DataStore.h  Engine.cpp  Engine.h  GLFW.cpp  GLFW.h  Rect.h  Renderer.cpp  Renderer.h  Star.h  Universe.cpp  Universe.h  main.cpp
